--- a/src/navigation/ground/traffic_sim/tests/CMakeLists.txt
+++ b/src/navigation/ground/traffic_sim/tests/CMakeLists.txt
@@ -2,5 +2,8 @@
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
+add_executable(test_sim_manager test_sim_manager.cpp)
+target_link_libraries(test_sim_manager tfield trafficsim utils)
+
 # add_executable(test_trafficsim test_trafficsim.cpp)
 # target_link_libraries(test_trafficsim tfield trafficsim utils)
