cleanedup datalink/lcm_link module

--- a/src/kernel/device/sensor/imu/CMakeLists.txt
+++ b/src/kernel/device/sensor/imu/CMakeLists.txt
@@ -8,7 +8,7 @@ set(IMU_LIB_SRC
 	src/fxas21002c.cpp
 )
 add_library(imu STATIC ${IMU_LIB_SRC})
-target_link_libraries(imu i2cbus)
+# target_link_libraries(imu i2cbus)
 target_include_directories(imu PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>
