--- a/src/navigation/ground/traffic_sim/tests/CMakeLists.txt
+++ b/src/navigation/ground/traffic_sim/tests/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 ## tests
 add_executable(test_sim_manager test_sim_manager.cpp)
-target_link_libraries(test_sim_manager tfield trafficsim utils)
+target_link_libraries(test_sim_manager trafficsim utils)
 
 # add_executable(test_trafficsim test_trafficsim.cpp)
 # target_link_libraries(test_trafficsim tfield trafficsim utils)
