saved work on traffic sim

--- a/src/navigation/ground/cav_common/CMakeLists.txt
+++ b/src/navigation/ground/cav_common/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CAV_COMMON_LIB_SRC
     src/vehicle_state.cpp
 )
 add_library(cav_common STATIC ${CAV_COMMON_LIB_SRC})
-target_link_libraries(cav_common utils)
+target_link_libraries(cav_common common geometry utils)
 target_include_directories(cav_common PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>	
