--- a/src/rav_viewer/CMakeLists.txt
+++ b/src/rav_viewer/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.0.0)
 project(librav_viewer)
 
 ## Add sub source directories
-add_subdirectory(ugv_viz)
+# add_subdirectory(ugv_viz)
 
