added a large map

--- a/src/navigation/ground/traffic_map/tests/CMakeLists.txt
+++ b/src/navigation/ground/traffic_map/tests/CMakeLists.txt
@@ -4,3 +4,6 @@
 ## tests
 add_executable(test_trafficmap test_trafficmap.cpp)
 target_link_libraries(test_trafficmap traffic lightviz ugvnav_viz utils)
+
+add_executable(test_trafficmap2 test_trafficmap2.cpp)
+target_link_libraries(test_trafficmap2 traffic lightviz ugvnav_viz utils)
