saved work on route planner

--- a/src/navigation/ground/cav_motion/CMakeLists.txt
+++ b/src/navigation/ground/cav_motion/CMakeLists.txt
@@ -3,16 +3,16 @@
 
 # Add libraries
 set(CAV_MOTION_LIB_SRC
-  # lattice planner
-#   src/lattice_graph.cpp
-#   src/reference_trajectory.cpp
-  # src/lattice_planner.cpp
-  # threat evaluation
-#   src/lookahead_zone.cpp
+    # controller
+    src/cav_virtual_controller.cpp
+    # planner
+    src/reference_route.cpp
+    src/route_planner.cpp
+    # motion manager
     src/cav_motion_manager.cpp
 )
 add_library(cav_motion STATIC ${CAV_MOTION_LIB_SRC})
-target_link_libraries(cav_motion common cav_common local_planner datalink utils)
+target_link_libraries(cav_motion common datalink cav_common traffic local_planner utils)
 target_include_directories(cav_motion PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
