--- a/src/navigation/ground/cav_motion/CMakeLists.txt
+++ b/src/navigation/ground/cav_motion/CMakeLists.txt
@@ -4,12 +4,14 @@
 # Add libraries
 set(CAV_MOTION_LIB_SRC
     # controller
-    src/cav_virtual_controller.cpp
+    src/virtual_controller.cpp
     # planner
     src/reference_route.cpp
     src/route_planner.cpp
     # motion manager
     src/cav_motion_manager.cpp
+    # mission control
+    src/cav_mission_control.cpp
 )
 add_library(cav_motion STATIC ${CAV_MOTION_LIB_SRC})
 target_link_libraries(cav_motion common datalink cav_common traffic local_planner utils)
@@ -17,6 +19,8 @@ target_include_directories(cav_motion PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
   PRIVATE src)
+
+add_subdirectory(apps)
 
 if(BUILD_TESTS)
   add_subdirectory(tests)
