--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,7 @@ add_subdirectory(third_party)
 add_subdirectory(mcontrol)
 add_subdirectory(navigation)
 add_subdirectory(platforms)
+add_subdirectory(viewers)
 
 # Publication-related code
 add_subdirectory(publication)
