created a cmakelist in root folder, started working on rrt

--- a/src/kernel/datalink/CMakeLists.txt
+++ b/src/kernel/datalink/CMakeLists.txt
@@ -27,16 +27,13 @@ find_package(LCM REQUIRED)
 if(LCM_NOT_FOUND)
   message(STATUS "LCM is not found. Inter-process communication depends on LCM.")
 endif(LCM_NOT_FOUND)
-# Include files for LCM
-set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
-include_directories(${LCM_GENERATED_HEADER_PATH})
 
 ## Add libraries
 add_library(datalink INTERFACE)
 target_link_libraries(datalink INTERFACE ${LCM_LIBRARIES})
 target_include_directories(datalink INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<BUILD_INTERFACE:${LCM_GENERATED_HEADER_PATH}>
+    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
 	$<INSTALL_INTERFACE:include>)
 
 # Add executables
