--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,31 +1,10 @@
-cmake_minimum_required(VERSION 3.0.0)
-project(librav)
-
 # cmake module path
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/src/cmake/modules")
 
 # automatically build LCM types.  This also defines a number of CMake
 # variables, see cmake/lcmtypes.cmake for details
 include(cmake/lcmtypes.cmake)
 lcmtypes_build()
-
-# generate symbols for IDE indexer
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-## Chosse build type
-set(CMAKE_BUILD_TYPE Release)
-# set(CMAKE_BUILD_TYPE Debug)
-
-## Optionally built modules: ON/OFF
-set(ENABLE_LOGGING ON)
-set(BUILD_TESTS ON)
-
-if(ENABLE_LOGGING)
-	message( "-- Enable logging with spdlog -- Yes" )
-	message( "-- Default log file storage location: librav/data/log" )
-else(ENABLE_LOGGING)
-	message( "-- Enable logging with spdlog -- No" )
-endif(ENABLE_LOGGING)
 
 ## Add sub source directories
 # Core packages of librav
