saved work on rrt

--- a/src/kernel/planning/CMakeLists.txt
+++ b/src/kernel/planning/CMakeLists.txt
@@ -27,5 +27,5 @@ add_subdirectory(decomp)
 # add_subdirectory(tree)
 add_subdirectory(graph)
 add_subdirectory(random)
-add_subdirectory(rrt)
+add_subdirectory(sampling)
 add_subdirectory(trajectory)
