--- a/src/kernel/logging/CMakeLists.txt
+++ b/src/kernel/logging/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Dependency libraries
-# find_package(LIB_NAME REQUIRED)
+find_package(Threads REQUIRED)
 
 # Add libraries
 set(LOGGING_LIB_SRC
@@ -9,9 +9,9 @@ set(LOGGING_LIB_SRC
 )
 add_library(logging STATIC ${LOGGING_LIB_SRC})
 if(ENABLE_LOGGING)
-target_compile_definitions(logging PUBLIC -DENABLE_LOGGING)
+target_compile_definitions(logging PUBLIC "-DENABLE_LOGGING")
 endif(ENABLE_LOGGING)
-target_link_libraries(logging spdlog)
+target_link_libraries(logging spdlog ${CMAKE_THREAD_LIBS_INIT})
 target_include_directories(logging PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>
