--- a/src/platforms/simulator/quad_hbird_sim/CMakeLists.txt
+++ b/src/platforms/simulator/quad_hbird_sim/CMakeLists.txt
@@ -7,7 +7,7 @@ set(QUADSIM_LIB_SRC
     src/quad_hbird_sim_control.cpp
 )
 add_library(quad_sim STATIC ${QUADSIM_LIB_SRC})
-target_link_libraries(quad_sim sim_interface common quad_ctrl quad_sys datalink)
+target_link_libraries(quad_sim sim_interface common quad_ctrl quad_sys datalink logging)
 target_include_directories(quad_sim PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
