sync graph module from libgraph

--- a/src/kernel/planning/sampling/tests/CMakeLists.txt
+++ b/src/kernel/planning/sampling/tests/CMakeLists.txt
@@ -6,7 +6,10 @@ add_executable(test_tree test_tree.cpp)
 target_link_libraries(test_tree sampling)
 
 add_executable(test_rvspace test_rvspace.cpp)
-target_link_libraries(test_rvspace sampling)
+target_link_libraries(test_rvspace sampling utils)
 
 add_executable(test_rng test_rng.cpp)
 target_link_libraries(test_rng sampling)
+
+add_executable(test_rrt test_rrt.cpp)
+target_link_libraries(test_rrt sampling utils)
