--- a/src/kernel/planning/sampling/CMakeLists.txt
+++ b/src/kernel/planning/sampling/CMakeLists.txt
@@ -1,15 +1,16 @@
 # Dependency libraries
-# find_package(LIBRARY_NAME REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 # Add libraries
 set(SAMPLING_LIB_SRC
     src/rand_num_gen.cpp
 )
 add_library(sampling ${SAMPLING_LIB_SRC})
-# target_link_libraries(sampling common)
+target_link_libraries(sampling graph)
 # target_sources(sampling INTERFACE ${SAMPLING_LIB_SRC})
 target_include_directories(sampling PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
   $<INSTALL_INTERFACE:include>
   private src)
 
