--- a/src/kernel/planning/sampling/CMakeLists.txt
+++ b/src/kernel/planning/sampling/CMakeLists.txt
@@ -6,7 +6,7 @@ set(SAMPLING_LIB_SRC
     src/rand_num_gen.cpp
 )
 add_library(sampling ${SAMPLING_LIB_SRC})
-target_link_libraries(sampling graph)
+target_link_libraries(sampling graph lightviz)
 # target_sources(sampling INTERFACE ${SAMPLING_LIB_SRC})
 target_include_directories(sampling PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
