updated validity checker

--- a/src/kernel/planning/sampling/tests/CMakeLists.txt
+++ b/src/kernel/planning/sampling/tests/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(test_rng sampling)
 
 add_executable(test_rrt test_rrt.cpp)
 target_link_libraries(test_rrt sampling utils)
+
+# add_executable(test_kdtree test_kdtree.cpp)
+# target_link_libraries(test_kdtree sampling utils)
