--- a/src/kernel/vizcore/CMakeLists.txt
+++ b/src/kernel/vizcore/CMakeLists.txt
@@ -23,5 +23,6 @@ set(ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 ## Add other sub source directories
 add_subdirectory(canvas)
+add_subdirectory(cvdraw)
 add_subdirectory(lightviz)
 add_subdirectory(lightview)
