--- a/src/kernel/vizcore/cvdraw/tests/CMakeLists.txt
+++ b/src/kernel/vizcore/cvdraw/tests/CMakeLists.txt
@@ -2,15 +2,11 @@
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
-# add_subdirectory(fltk)
-# add_subdirectory(cairo)
-# add_subdirectory(opencv)
-
-# add_executable(test_cv_cairo test_cv_cairo.cpp)
-# target_link_libraries(test_cv_cairo canvas)
-
 add_executable(test_cv_canvas test_cv_canvas.cpp)
 target_link_libraries(test_cv_canvas cvdraw)
 
 add_executable(test_cv_drawmode test_cv_drawmode.cpp)
 target_link_libraries(test_cv_drawmode cvdraw)
+
+add_executable(test_cv_drawfunc test_cv_drawfunc.cpp)
+target_link_libraries(test_cv_drawfunc cvdraw)
