finished refactoring vizcore

--- a/src/kernel/visual/CMakeLists.txt
+++ b/src/kernel/visual/CMakeLists.txt
@@ -25,5 +25,5 @@ set(ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 add_subdirectory(canvas)
 add_subdirectory(cvdraw)
 add_subdirectory(coreviz)
-# add_subdirectory(lightviz)
+add_subdirectory(lightviz)
 add_subdirectory(lightview)
