--- a/src/kernel/visual/cvdraw/tests/CMakeLists.txt
+++ b/src/kernel/visual/cvdraw/tests/CMakeLists.txt
@@ -2,6 +2,9 @@
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
+add_executable(test_image_rw test_image_rw.cpp)
+target_link_libraries(test_image_rw coreviz)
+
 add_executable(test_cv_canvas test_cv_canvas.cpp)
 target_link_libraries(test_cv_canvas cvdraw)
 
