--- a/src/kernel/visual/lightviz/CMakeLists.txt
+++ b/src/kernel/visual/lightviz/CMakeLists.txt
@@ -5,16 +5,12 @@ find_package(TBB REQUIRED)
 ## Add libraries
 # LightViz library
 set(LIGHTVIZ_LIB_SRC
-	src/cartesian_canvas.cpp
-	src/matrix_draw.cpp
-	src/geometry_draw.cpp
-	# src/curvilinear_grid_draw.cpp
 	src/matrix_viz.cpp
 	src/polygon_viz.cpp
 	src/curve_viz.cpp
 )
 add_library(lightviz STATIC ${LIGHTVIZ_LIB_SRC})
-target_link_libraries(lightviz decomp graph sampling geometry canvas pthread ${TBB_LIBRARIES})
+target_link_libraries(lightviz decomp graph sampling geometry coreviz pthread ${TBB_LIBRARIES})
 target_include_directories(lightviz PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
@@ -24,5 +20,5 @@ target_include_directories(lightviz PUBLIC
 
 # Add executables
 if(BUILD_TESTS)
-	# add_subdirectory(tests)
+	add_subdirectory(tests)
 endif()
