finished updating ugvnav_viz, cleanup to be done

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,11 +14,11 @@ add_subdirectory(third_party)
 # Packages built on top of kernel
 add_subdirectory(mcontrol)
 add_subdirectory(navigation)
-# add_subdirectory(lightview)
-# add_subdirectory(platforms)
+add_subdirectory(lightview)
+add_subdirectory(platforms)
 
 # Publication-related code
-# add_subdirectory(publication)
+add_subdirectory(publication)
 
 ## Add test source directories
 if(BUILD_TESTS)
