--- a/src/lightview/CMakeLists.txt
+++ b/src/lightview/CMakeLists.txt
@@ -14,6 +14,18 @@ target_include_directories(lightview PUBLIC
   $<INSTALL_INTERFACE:include>
   PRIVATE src)
 
+set(SIM_VIEWER_LIB_SRC
+  src/traffic_viewer.cpp
+)
+add_library(trafficsim_viewer STATIC ${SIM_VIEWER_LIB_SRC})
+target_link_libraries(trafficsim_viewer trafficsim datalink traffic lightview lightviz navviz utils ${OpenCV_LIBS})
+target_include_directories(trafficsim_viewer PUBLIC
+$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+$<INSTALL_INTERFACE:include>
+PRIVATE src)
+
+add_subdirectory(apps)
+
 # Add executables
 if(BUILD_TESTS)
 	add_subdirectory(tests)
