--- a/src/navigation/ground/field_decomp/CMakeLists.txt
+++ b/src/navigation/ground/field_decomp/CMakeLists.txt
@@ -14,10 +14,8 @@ target_include_directories(field_decomp PUBLIC
     $<INSTALL_INTERFACE:include>
     PRIVATE src)
 
-# add_subdirectory(apps)
-
 if(BUILD_TESTS)
-    # add_subdirectory(tests)
+    add_subdirectory(tests)
 endif()
 
 # TEMPLATE, TO BE UPDATED
