--- a/src/navigation/ground/cav_common/CMakeLists.txt
+++ b/src/navigation/ground/cav_common/CMakeLists.txt
@@ -14,5 +14,5 @@ target_include_directories(cav_common PUBLIC
 
 # Add executables
 if(BUILD_TESTS)
-	# add_subdirectory(tests)
+	add_subdirectory(tests)
 endif()
