--- a/src/navigation/ground/cav_common/tests/CMakeLists.txt
+++ b/src/navigation/ground/cav_common/tests/CMakeLists.txt
@@ -2,5 +2,5 @@
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
-add_executable(test_trafficmap test_trafficmap.cpp)
-target_link_libraries(test_trafficmap traffic lightviz navviz utils)
+# add_executable(test_trafficmap test_trafficmap.cpp)
+# target_link_libraries(test_trafficmap traffic lightviz navviz utils)
