--- a/src/navigation/ground/traffic_map/tests/CMakeLists.txt
+++ b/src/navigation/ground/traffic_map/tests/CMakeLists.txt
@@ -2,8 +2,8 @@
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
-# add_executable(test_trafficmap test_trafficmap.cpp)
-# target_link_libraries(test_trafficmap traffic lightviz navviz utils)
+add_executable(test_trafficmap test_trafficmap.cpp)
+target_link_libraries(test_trafficmap traffic navviz utils)
 
-# add_executable(test_trafficmap2 test_trafficmap2.cpp)
-# target_link_libraries(test_trafficmap2 traffic lightviz navviz utils)
+add_executable(test_trafficmap2 test_trafficmap2.cpp)
+target_link_libraries(test_trafficmap2 traffic navviz utils)
