--- a/src/kernel/visualization/cairodraw/tests/cairo/box/CMakeLists.txt
+++ b/src/kernel/visualization/cairodraw/tests/cairo/box/CMakeLists.txt
@@ -1,3 +1,3 @@
 ## tests
 add_executable(test_cairo_fltk driver.cpp CairoBox.cpp CairoBox.h)
-target_link_libraries(test_cairo_fltk canvas)
+target_link_libraries(test_cairo_fltk cairodraw)
