--- a/src/kernel/visualization/cairodraw/tests/cairo/flwin/CMakeLists.txt
+++ b/src/kernel/visualization/cairodraw/tests/cairo/flwin/CMakeLists.txt
@@ -1,3 +1,3 @@
 ## tests
 add_executable(test_cairo_flwin test_cairo_flwin.cpp)
-target_link_libraries(test_cairo_flwin canvas)
+target_link_libraries(test_cairo_flwin cairodraw)
