--- a/src/lightview/CMakeLists.txt
+++ b/src/lightview/CMakeLists.txt
@@ -10,9 +10,9 @@ set(LIGHTVIEW_LIB_SRC
 add_library(lightview STATIC ${LIGHTVIEW_LIB_SRC})
 target_link_libraries(lightview common utils imgui datalink ${OpenCV_LIBS})
 target_include_directories(lightview PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-  PRIVATE src)
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    PRIVATE src)
 
 set(SIM_VIEWER_LIB_SRC
   src/traffic_viewer.cpp
@@ -20,9 +20,19 @@ set(SIM_VIEWER_LIB_SRC
 add_library(trafficsim_viewer STATIC ${SIM_VIEWER_LIB_SRC})
 target_link_libraries(trafficsim_viewer trafficsim datalink traffic lightview lightviz navviz utils ${OpenCV_LIBS})
 target_include_directories(trafficsim_viewer PUBLIC
-$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-$<INSTALL_INTERFACE:include>
-PRIVATE src)
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    PRIVATE src)
+
+set(POSE_VIEWER_LIB_SRC
+  src/pose_viewer.cpp
+)
+add_library(pose_viewer STATIC ${POSE_VIEWER_LIB_SRC})
+target_link_libraries(pose_viewer drawstuff trafficsim datalink traffic lightview lightviz navviz utils ${OpenCV_LIBS})
+target_include_directories(pose_viewer PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    PRIVATE src)
 
 add_subdirectory(apps)
 
