--- a/src/lightview/tests/CMakeLists.txt
+++ b/src/lightview/tests/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(test_imgui imgui)
 
 add_executable(test_traffic_viewer test_traffic_viewer.cpp)
 target_link_libraries(test_traffic_viewer trafficsim_viewer)
+
+add_executable(test_pose_viewer test_pose_viewer.cpp)
+target_link_libraries(test_pose_viewer pose_viewer)
