--- a/src/navigation/ground/threat_field/tests/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/tests/CMakeLists.txt
@@ -8,3 +8,9 @@ target_link_libraries(test_field_basis tfield threatdist navviz utils)
 
 add_executable(test_threat_map test_threat_map.cpp)
 target_link_libraries(test_threat_map tfield threatdist navviz utils)
+
+add_executable(test_derived_prob test_derived_prob.cpp)
+target_link_libraries(test_derived_prob reachability utils)
+
+add_executable(test_derived_prob2 test_derived_prob2.cpp)
+target_link_libraries(test_derived_prob2 reachability utils)
