fixed topogeo graph: failed to identify sinks/sources before fix

--- a/src/navigation/ground/threat_field/tests/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/tests/CMakeLists.txt
@@ -14,3 +14,6 @@ target_link_libraries(test_derived_prob reachability utils)
 
 add_executable(test_derived_prob2 test_derived_prob2.cpp)
 target_link_libraries(test_derived_prob2 reachability utils)
+
+add_executable(test_field_scenario test_field_scenario.cpp)
+target_link_libraries(test_field_scenario roadmap navviz utils)
