excluded imgui and lightview from project, used opencv to view traffic sim

--- a/src/navigation/ground/traffic_sim/apps/CMakeLists.txt
+++ b/src/navigation/ground/traffic_sim/apps/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(app_sim_scenario2 trafficsim)
 
 add_executable(app_sim_scenario3 app_sim_scenario3.cpp)
 target_link_libraries(app_sim_scenario3 trafficsim)
+
+add_executable(app_sim_scenario4 app_sim_scenario4.cpp)
+target_link_libraries(app_sim_scenario4 trafficsim)
