--- a/src/navigation/ground/traffic_sim/CMakeLists.txt
+++ b/src/navigation/ground/traffic_sim/CMakeLists.txt
@@ -16,6 +16,16 @@ target_include_directories(trafficsim PUBLIC
     $<INSTALL_INTERFACE:include>
     PRIVATE src)
 
+set(TRAFFICSIM_VIEWER_LIB_SRC
+    src/trafficsim_viewer.cpp
+)
+add_library(trafficsim_viewer STATIC ${TRAFFICSIM_VIEWER_LIB_SRC})
+target_link_libraries(trafficsim_viewer trafficsim datalink traffic lightviz navviz utils ${OpenCV_LIBS})
+target_include_directories(trafficsim_viewer PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    PRIVATE src)        
+
 add_subdirectory(apps)
 
 if(BUILD_TESTS)
