--- a/src/navigation/ground/traffic_sim/tests/CMakeLists.txt
+++ b/src/navigation/ground/traffic_sim/tests/CMakeLists.txt
@@ -8,5 +8,5 @@ target_link_libraries(test_sim_manager trafficsim utils)
 add_executable(test_ego_state test_ego_state.cpp)
 target_link_libraries(test_ego_state trafficsim utils)
 
-# add_executable(test_trafficsim test_trafficsim.cpp)
-# target_link_libraries(test_trafficsim threatdist trafficsim utils)
+add_executable(test_trafficsim_viewer test_trafficsim_viewer.cpp)
+target_link_libraries(test_trafficsim_viewer trafficsim trafficsim_viewer utils)
