--- a/src/navigation/ground/local_planner/tests/CMakeLists.txt
+++ b/src/navigation/ground/local_planner/tests/CMakeLists.txt
@@ -14,5 +14,5 @@ target_link_libraries(test_lattice_threat local_planner navviz utils)
 add_executable(test_reference_trajectory test_reference_trajectory.cpp)
 target_link_libraries(test_reference_trajectory local_planner navviz utils)
 
-add_executable(test_lookahead_zone test_lookahead_zone.cpp)
-target_link_libraries(test_lookahead_zone local_planner navviz utils)
+# add_executable(test_lookahead_zone test_lookahead_zone.cpp)
+# target_link_libraries(test_lookahead_zone local_planner navviz utils)
