--- a/src/navigation/navviz/tests/CMakeLists.txt
+++ b/src/navigation/navviz/tests/CMakeLists.txt
@@ -17,11 +17,11 @@ target_link_libraries(test_static_threat_viz navviz utils)
 add_executable(test_lattice_graph_viz test_lattice_graph_viz.cpp)
 target_link_libraries(test_lattice_graph_viz navviz utils)
 
-add_executable(test_lookahead_zone_viz test_lookahead_zone_viz.cpp)
-target_link_libraries(test_lookahead_zone_viz navviz utils)
+# add_executable(test_lookahead_zone_viz test_lookahead_zone_viz.cpp)
+# target_link_libraries(test_lookahead_zone_viz navviz utils)
 
-add_executable(test_threat_field_viz test_threat_field_viz.cpp)
-target_link_libraries(test_threat_field_viz navviz utils)
+# add_executable(test_threat_field_viz test_threat_field_viz.cpp)
+# target_link_libraries(test_threat_field_viz navviz utils)
 
 add_executable(test_lattice_threat_viz test_lattice_threat_viz.cpp)
 target_link_libraries(test_lattice_threat_viz navviz utils)
