--- a/src/navigation/ground/CMakeLists.txt
+++ b/src/navigation/ground/CMakeLists.txt
@@ -31,6 +31,6 @@ add_subdirectory(reachability)
 add_subdirectory(state_lattice)
 add_subdirectory(local_planner)
 add_subdirectory(threat_dist)
+# add_subdirectory(connectivity)
 add_subdirectory(threat_field)
-add_subdirectory(connectivity)
 add_subdirectory(traffic_sim)
