--- a/src/platforms/rc_car/CMakeLists.txt
+++ b/src/platforms/rc_car/CMakeLists.txt
@@ -23,6 +23,6 @@ set(ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 ## Add other sub source directories
 # add_subdirectory(apps)
-add_subdirectory(params)
+add_subdirectory(shared)
 add_subdirectory(system)
 add_subdirectory(driver)
