--- a/src/platforms/simulator/quad_solo_sim/apps/CMakeLists.txt
+++ b/src/platforms/simulator/quad_solo_sim/apps/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Apps based on AscTec Hummingbird
-add_executable(quadsim_hbird_demo quadsim_hbird_demo.cpp)
-target_link_libraries(quadsim_hbird_demo quad_sim)
+# add_executable(quadsim_hbird_demo quadsim_hbird_demo.cpp)
+# target_link_libraries(quadsim_hbird_demo quad_sim)
 
 # add_executable(rc_tamiya_sim_demo rc_tamiya_sim_demo.cpp)
 # target_link_libraries(rc_tamiya_sim_demo rccar_sim)
@@ -18,5 +18,5 @@ target_link_libraries(quadsim_hbird_demo quad_sim)
 # target_link_libraries(quadsim_hbird_pos_step quad_sim)
 
 # # Apps based on 3DR Solo
-# add_executable(quadsim_solo_demo quadsim_solo_demo.cpp)
-# target_link_libraries(quadsim_solo_demo quadsolosim)
+add_executable(quadsim_solo_demo quadsim_solo_demo.cpp)
+target_link_libraries(quadsim_solo_demo quadsolosim)
