--- a/src/navigation/ground/CMakeLists.txt
+++ b/src/navigation/ground/CMakeLists.txt
@@ -30,7 +30,7 @@ add_subdirectory(traffic_map)
 add_subdirectory(reachability)
 add_subdirectory(state_lattice)
 add_subdirectory(local_planner)
-add_subdirectory(threat_dist)
+add_subdirectory(prediction)
 # add_subdirectory(connectivity)
 add_subdirectory(threat_field)
 add_subdirectory(traffic_sim)
